# plugin-all4one

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake.nix  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: codecov.yml  docker.yml  publish_to_pypi.yaml
docker/: .env  Dockerfile  bot.py
nonebot_plugin_all4one/: __init__.py  __version__.py  config.py  data.py  handle.py  logger.py  parser.py
nonebot_plugin_all4one/database/: __init__.py  fleep.py
nonebot_plugin_all4one/middlewares/: __init__.py  base.py  console.py  discord.py  onebot_v11.py  qqguild.py  telegram.py  villa.py
nonebot_plugin_all4one/middlewares/onebot/: v11.py  v12.py
nonebot_plugin_all4one/migrations/: 6e6321bc6c48_init_db.py  d0a1d19f3408_.py
nonebot_plugin_all4one/obimpl/: __init__.py  config.py
nonebot_plugin_all4one/onebotimpl/: __init__.py  config.py  utils.py
tests/: conftest.py
tests/database/: test_database.py
tests/middlewares/onebot/: events.json  test_onebot_v11.py  test_onebot_v12.py
tests/middlewares/onebot_v11/: test_onebot_v11.py
tests/middlewares/qqguild/: events.json  test_qqguild.py
tests/middlewares/telegram/: test_telegram.py
tests/middlewares/villa/: events.json  test_villa.py
tests/onebotimpl/: test_bot_connect.py  test_call_api.py
tests/qqguild/: events.json  test_event.py
tests/telegram/: test_telegram.py
