[project]
name = "nonebot-plugin-all4one"
version = "0.1.0a1"
description = ""
authors = [{ name = "Jigsaw", email = "j1g5aw@foxmail.com" }]
dependencies = [
    "nonebot2<3.0.0,>=2.0.0rc2",
    "nonebot-adapter-onebot>=2.2.2",
    "nonebot-plugin-datastore>=0.6.0",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "AGPL-3.0-only" }

[project.optional-dependencies]
telegram = ["nonebot-adapter-telegram>=0.1.0b10"]
console = ["nonebot-adapter-console>=0.3.2"]
qqguild = ["nonebot-adapter-qqguild>=0.2.2"]

[tool.pdm.dev-dependencies]
pre-commit = ["pycln", "isort", "black", "nonemoji", "pre-commit"]
nonebot = [
    "httpx>=0.23.3,<1.0.0",
    "fastapi>=0.88.0,!=0.89.0,<1.0.0",
    "websockets>=10.4",
    "uvicorn>=0.12.0,<0.21.0",
]
adapters = [
    "nonebot-adapter-onebot @ git+https://github.com/nonebot/adapter-onebot.git",
    "nonebot-adapter-telegram @ git+https://github.com/nonebot/adapter-telegram.git",
    "nonebot-adapter-console @ git+https://github.com/nonebot/adapter-console.git",
    "nonebot-adapter-qqguild @ git+https://github.com/nonebot/adapter-qqguild.git",
]
tests = [
    "nonebug>=0.3.1",
    "pytest-asyncio>=0.20.3",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.2.0",
]
impl = [
    "nonebot-plugin-sentry>=0.2.2",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."
all = false

[tool.pyright]
reportShadowedImports = false
pythonVersion = "3.8"
pythonPlatform = "All"
extraPaths = ["__pypackages__/3.8/lib/"]
exclude = ["__pypackages__", "nonebot_plugin_all4one/migrations"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
